GigHub/Content/Site.css
body {
    padding-top: 90px;
    padding-bottom: 20px;
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}


.field-validation-error {
    font-weight: bold;
    color: #ff0000;
}

/* Bootstrap Overrides */
.navbar-brand {
    font-weight: 700;
}

.navbar-inverse {
    background-color: #ff4342;
    border-color: #ff4342;
}

.navbar-inverse .navbar-nav > li > a {
    color: #fff;
}

.navbar-inverse .navbar-brand {
    color: #fff;
}

.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
    background-color: #ea3333;
}

.dropdown-menu {
    -webkit-box-shadow: none;
    box-shadow: none;
}

body,
.tooltip,
.popover {
    font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.form-group {
    font-size: 17px;
    margin-bottom: 20px;
}

.form-control {
    padding: 20px 12px;
    font-size: 17px;
    -ms-border-radius: 9px;
    border-radius: 9px
}

.form-control:focus {
    border-color: #668ce9;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.btn {
    padding: 8px 20px;
    font-size: 17px;
    -ms-border-radius: 9px;
    border-radius: 9px;
}

/* Page Level Styles*/

.gig {
    list-style: none;
}

.gig > li {
    position: relative;
    margin-bottom: 30px;
}

.gig > li > .date {
    background: red;
    color: white;
    width: 60px;
    -ms-border-radius: 8px;
    border-radius: 8px;
    text-align: center;
}

.gig > li .date .month {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: bold;
    padding: 2px 6px;
}

.gig > li .date .day {
    font-size: 20px;
    background: #f7f7f7;
    color: #333;
    padding: 6px 12px;
}

.gig > li .details {
    position: absolute;
    left: 70px;
}

.gig > li .details .artist {
    font-weight: bold;
}

.gig > li .details .genre {
    font-size: 15px;
    display: block;
}

